load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/bazeltools/cache",
    visibility = ["//visibility:private"],
    deps = ["//bazeltools/cache/cmd:go_default_library"],
)

go_binary(
    name = "cache",
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/bazeltools/cache",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
