load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/bazeltools/cache/cmd",
    visibility = ["//visibility:public"],
    deps = [
        # "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)
